vlib/v/checker/tests/fn_call_with_extra_parenthesis.vv
fn doit(i int) {
}

fn main() {
	main.doit()(1)
}
